# oncology-intelligence

./: .env.example  .gitignore  0001-feat-add-Question-Surface-layer-People-Also-Ask-auto.patch  CLAUDE.md  README.md  VIOLET_Demo_Script_SYNGAP1.docx  VIOLET_SPEC.md  package-lock.json
.github/workflows/: deploy.yml
_question_surface_drop/backend/pipeline/: orchestrator.py  (+1 more)
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run_pipeline.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routes/: chat.py  cluster_compare.py  clusters.py  compare.py  geography.py  insights.py  pipeline.py  questions.py  stories.py  terms.py  trends.py  triangulation.py
backend/data/: sample_data.json
backend/pipeline/: anomaly_detection.py  clustering.py  embeddings.py  external_data.py  orchestrator.py  sdoh_loader.py  taxonomy.py  trends_fetcher.py
frontend/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  ClusterComparisonPopup.tsx  ClusterVisualization.tsx  DataSourcesPanel.tsx  DetailPanel.tsx  ExplainerPanel.tsx  FilterPanel.tsx  InsightsPanel.tsx  PipelinePanel.tsx  RegionComparisonPanel.tsx  StatsBar.tsx  SuperTruthLogo.tsx  Tooltip.tsx  ViewControls.tsx  VulnerabilityInsightsPanel.tsx  VulnerabilityWindow.tsx
frontend/lib/: api.ts  store.ts
scripts/: fetch_full_trends.py  import_sheets.py  init_and_seed.py  init_db.sql  run_pipeline.py  seed_data.sql  seed_database.py
(+5 files in other folders)
